--- a/example_treatment_effect_under_placebo_A.ipynb
+++ b/example_treatment_effect_under_placebo_A.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -49,12 +49,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Example A. The regression estimator."
+    "### Example A. The regression estimator.\n",
+    "\n",
+    "We fit $\\mathrm{logit}(Y) \\sim \\beta X + \\tau T$.  The estimated parameter $\\hat{\\tau}$ is the regression estimator for the treatment effect."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -63,7 +65,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Treatment Effect CI: (0.07,  1.32)\n"
+      "Treatment Effect CI: (0.07,  1.35)\n"
      ]
     }
    ],
@@ -90,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -100,12 +102,12 @@
      "output_type": "stream",
      "text": [
       "risk factor  treatment\n",
-      "0            0            143\n",
-      "             1             11\n",
-      "1            0              5\n",
-      "             1             41\n",
+      "0            0            128\n",
+      "             1             14\n",
+      "1            0              6\n",
+      "             1             52\n",
       "dtype: int64\n",
-      "Estimated treatment effect = 0.80\n"
+      "Estimated treatment effect = 0.99\n"
      ]
     }
    ],
@@ -141,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -151,19 +153,19 @@
      "output_type": "stream",
      "text": [
       "risk factor  treatment\n",
-      "0            0            11\n",
-      "             1            11\n",
-      "1            0             5\n",
-      "             1             5\n",
+      "0            0            14\n",
+      "             1            14\n",
+      "1            0             6\n",
+      "             1             6\n",
       "dtype: int64\n",
-      "Estimated treatment effect = -0.21\n"
+      "Estimated treatment effect = 0.43\n"
      ]
     }
    ],
    "source": [
     "# Sample matches between treatment and control groups.\n",
-    "from treatment_effect_under_placebo_tests import scenario_A_match_exact\n",
-    "idx = scenario_A_match_exact(x, treat)\n",
+    "from treatment_effect_under_placebo_tests import match_exact\n",
+    "idx = match_exact(x, treat)\n",
     "X = np.hstack([x, treat])[idx,:]  \n",
     "y_ = y[idx]\n",
     "\n",
@@ -188,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -198,12 +200,12 @@
      "output_type": "stream",
      "text": [
       "risk factor  treatment\n",
-      "0            0            11\n",
-      "             1            11\n",
-      "1            0             5\n",
-      "             1             5\n",
+      "0            0            14\n",
+      "             1            14\n",
+      "1            0             6\n",
+      "             1             6\n",
       "dtype: int64\n",
-      "Estimated treatment effect = -0.06\n"
+      "Estimated treatment effect = 0.28\n"
      ]
     }
    ],
@@ -235,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -244,9 +246,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Method regression, Treatment Effect CI: (0.07,  1.29); 1000 valid runs.\n",
-      "Method matchexact, Treatment Effect CI: (-0.86,  0.39); 1000 valid runs.\n",
-      "Method matchdist, Treatment Effect CI: (-0.85,  0.41); 999 valid runs.\n"
+      "Method regression, Treatment Effect CI: (0.05,  1.32); 1000 valid runs.\n",
+      "Method matchexact, Treatment Effect CI: (-0.88,  0.40); 1000 valid runs.\n",
+      "Method matchdist, Treatment Effect CI: (-0.88,  0.47); 1000 valid runs.\n"
      ]
     }
    ],
