--- a/PlaceboSimulations/example_treatment_effect_under_placebo_A.ipynb
+++ b/PlaceboSimulations/example_treatment_effect_under_placebo_A.ipynb
@@ -38,10 +38,10 @@
    "source": [
     "N = 200\n",
     "p_has_risk_factor = 0.25\n",
-    "p_treat_given_risk_factor = 0.90\n",
-    "p_treat_given_no_risk_factor = 0.10\n",
-    "p_outcome_given_risk_factor = 0.90\n",
-    "p_outcome_given_no_risk_factor = 0.10\n",
+    "p_treat_given_risk_factor = 0.95\n",
+    "p_treat_given_no_risk_factor = 0.05\n",
+    "p_outcome_given_risk_factor = 0.95\n",
+    "p_outcome_given_no_risk_factor = 0.05\n",
     "n_iter = 1000"
    ]
   },
@@ -60,29 +60,17 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "sys.path.append(r'C:\\Users\\Jonathan\\Desktop\\Projects\\Simulations-master')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Treatment Effect CI: (0.01,  0.21)\n"
+      "Treatment Effect CI: (0.09,  0.28)\n"
      ]
     }
    ],
    "source": [
-    "from treatment_effect_under_placebo_tests import scenario_A, treatment_effect_estimator\n",
+    "from treatment_effect_under_placebo_simulations import scenario_A, treatment_effect_estimator\n",
     "method = 'regression'   \n",
     "cis, _ = scenario_A(N,\n",
     "                    n_iter,\n",
@@ -104,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -114,24 +102,24 @@
      "output_type": "stream",
      "text": [
       "risk factor  treatment\n",
-      "0            0            141\n",
-      "             1             16\n",
-      "1            0              4\n",
-      "             1             39\n",
+      "0            0            140\n",
+      "             1              7\n",
+      "1            0              3\n",
+      "             1             50\n",
       "dtype: int64\n",
-      "Estimated treatment effect = 0.12\n"
+      "Estimated treatment effect = 0.15\n"
      ]
     }
    ],
    "source": [
-    "# First, generate the risk factor, treament, outcome variables.\n",
+    "# First, generate the risk factor, treatment, outcome variables.\n",
     "import numpy as np\n",
-    "x = np.random.binomial(1,p_has_risk_factor,size=(N,1))\n",
+    "x = np.random.binomial(1,p_has_risk_factor,size=(N,))\n",
     "treat = np.random.binomial(1,p_treat_given_risk_factor*x+p_treat_given_no_risk_factor*(1-x))         \n",
-    "y = np.random.binomial(1,p_outcome_given_risk_factor*x+p_outcome_given_no_risk_factor*(1-x)) \n",
+    "y = np.squeeze(np.random.binomial(1,p_outcome_given_risk_factor*x+p_outcome_given_no_risk_factor*(1-x)))\n",
     "\n",
     "# Summarize\n",
-    "X = np.hstack([x, treat])\n",
+    "X = np.vstack([x, treat]).T\n",
     "import pandas as pd\n",
     "df = pd.DataFrame(X, columns=['risk factor', 'treatment'])\n",
     "print(df.groupby(['risk factor', 'treatment']).size())\n",
@@ -139,7 +127,7 @@
     "# Second, predict the outcome using logistic regression.\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "clf = LogisticRegression(penalty='l2')  \n",
-    "clf.fit(X,np.squeeze(y))\n",
+    "clf.fit(X,y)\n",
     "\n",
     "# We use the G-computation estimator for the treatment effect\n",
     "estimated_treatment_effect = treatment_effect_estimator(X,clf,method='gcomp')\n",
@@ -150,7 +138,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Example A. Exact matching, followed by applying the regression estimator."
+    "### Example A. Exact matching, followed by applying the G-computation estimator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "risk factor  treatment\n",
+      "0            0            7\n",
+      "             1            7\n",
+      "1            0            3\n",
+      "             1            3\n",
+      "dtype: int64\n",
+      "Estimated treatment effect = -0.05\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Sample matches between treatment and control groups.\n",
+    "from treatment_effect_under_placebo_simulations import match_exact\n",
+    "idx = match_exact(x, treat)\n",
+    "X = np.vstack([x, treat]).T[idx,:]  \n",
+    "y_ = y[idx]\n",
+    "\n",
+    "# Summarize\n",
+    "df = pd.DataFrame(X, columns=['risk factor', 'treatment'])\n",
+    "print(df.groupby(['risk factor', 'treatment']).size())\n",
+    "\n",
+    "# Then predict the outcome using logistic regression.\n",
+    "clf.fit(X,y_)\n",
+    "\n",
+    "# Use G-computation estimator for the treatment effect.\n",
+    "estimated_treatment_effect = treatment_effect_estimator(X,clf,method='gcomp')\n",
+    "print('Estimated treatment effect = {:.2f}'.format(estimated_treatment_effect))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Example A. Distance matching, followed by applying the G-computation estimator"
    ]
   },
   {
@@ -165,20 +200,20 @@
      "output_type": "stream",
      "text": [
       "risk factor  treatment\n",
-      "0            0            16\n",
-      "             1            16\n",
-      "1            0             4\n",
-      "             1             4\n",
+      "0            0             7\n",
+      "             1             7\n",
+      "1            0            50\n",
+      "             1            50\n",
       "dtype: int64\n",
-      "Estimated treatment effect = 0.08\n"
+      "Estimated treatment effect = -0.02\n"
      ]
     }
    ],
    "source": [
     "# Sample matches between treatment and control groups.\n",
-    "from treatment_effect_under_placebo_tests import match_exact\n",
-    "idx = match_exact(x, treat)\n",
-    "X = np.hstack([x, treat])[idx,:]  \n",
+    "from treatment_effect_under_placebo_simulations import match_dist\n",
+    "idx = match_dist(x, treat, caliper=0.9) \n",
+    "X = np.vstack([x, treat]).T[idx,:]  \n",
     "y_ = y[idx]\n",
     "\n",
     "# Summarize\n",
@@ -186,18 +221,11 @@
     "print(df.groupby(['risk factor', 'treatment']).size())\n",
     "\n",
     "# Then predict the outcome using logistic regression.\n",
-    "clf.fit(X,np.squeeze(y_))\n",
+    "clf.fit(X,y_)\n",
     "\n",
-    "# Use G-computation estimator for the treatment effect.\n",
+    "# Estimate treatment effect.\n",
     "estimated_treatment_effect = treatment_effect_estimator(X,clf,method='gcomp')\n",
     "print('Estimated treatment effect = {:.2f}'.format(estimated_treatment_effect))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Example A. Distance matching, followed by applying the regression estimator."
    ]
   },
   {
@@ -206,38 +234,9 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "risk factor  treatment\n",
-      "0            0            16\n",
-      "             1            16\n",
-      "1            0             4\n",
-      "             1             4\n",
-      "dtype: int64\n",
-      "Estimated treatment effect = 0.03\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Sample matches between treatment and control groups.\n",
-    "from treatment_effect_under_placebo_tests import match_dist\n",
-    "idx = match_dist(x, treat, caliper=0.9) \n",
-    "X = np.hstack([x, treat])[idx,:]  \n",
-    "y_ = y[idx]\n",
-    "\n",
-    "# Summarize\n",
-    "df = pd.DataFrame(X, columns=['risk factor', 'treatment'])\n",
-    "print(df.groupby(['risk factor', 'treatment']).size())\n",
-    "\n",
-    "# Then predict the outcome using logistic regression.\n",
-    "clf.fit(X,np.squeeze(y_))\n",
-    "\n",
-    "# Estimate treatment effect.\n",
-    "estimated_treatment_effect = treatment_effect_estimator(X,clf,method='gcomp')\n",
-    "print('Estimated treatment effect = {:.2f}'.format(estimated_treatment_effect))"
+    "# idx"
    ]
   },
   {
@@ -258,9 +257,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Method regression, Treatment Effect CI: (0.0101,  0.2043); 1000 valid runs.\n",
-      "Method matchexact, Treatment Effect CI: (-0.1459,  0.0762); 1000 valid runs.\n",
-      "Method matchdist, Treatment Effect CI: (-0.1461,  0.0762); 1000 valid runs.\n"
+      "Method regression, Treatment Effect CI: (0.0900,  0.2947); 1000 valid runs.\n",
+      "Method matchexact, Treatment Effect CI: (-0.1349,  0.0506); 964 valid runs.\n",
+      "Method matchdist, Treatment Effect CI: (-0.1010,  0.6350); 946 valid runs.\n"
      ]
     }
    ],
@@ -268,10 +267,10 @@
     "# Parameter Settings\n",
     "N = 200\n",
     "p_has_risk_factor = 0.25\n",
-    "p_treat_given_risk_factor = 0.90\n",
-    "p_treat_given_no_risk_factor = 0.10\n",
-    "p_outcome_given_risk_factor = 0.90\n",
-    "p_outcome_given_no_risk_factor = 0.10\n",
+    "p_treat_given_risk_factor = 0.95\n",
+    "p_treat_given_no_risk_factor = 0.05\n",
+    "p_outcome_given_risk_factor = 0.95\n",
+    "p_outcome_given_no_risk_factor = 0.05\n",
     "n_iter = 1000\n",
     "\n",
     "# Run all methods\n",
@@ -293,21 +292,21 @@
   "anaconda-cloud": {},
   "celltoolbar": "Raw Cell Format",
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python [conda root]",
    "language": "python",
-   "name": "python2"
+   "name": "conda-root-py"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
