--- a/PlaceboSimulations/example_treatment_effect_under_placebo_A.ipynb
+++ b/PlaceboSimulations/example_treatment_effect_under_placebo_A.ipynb
@@ -19,10 +19,10 @@
     "\n",
     "$\\begin{align}\n",
     "P(X=1) = 0.25 \\\\\n",
-    "P(T=1 \\mid X=1) = 0.90 \\\\\n",
-    "P(T=1 \\mid X=0) = 0.10 \\\\\n",
-    "P(Y=1 \\mid X=1) = 0.90 \\\\\n",
-    "P(Y=1 \\mid X=0) = 0.10\n",
+    "P(T=1 \\mid X=1) = 0.95 \\\\\n",
+    "P(T=1 \\mid X=0) = 0.05 \\\\\n",
+    "P(Y=1 \\mid X=1) = 0.95 \\\\\n",
+    "P(Y=1 \\mid X=0) = 0.05\n",
     "\\end{align}$\n",
     "\n",
     "We generate N=200 patients, then estimate the treatment effect.  This is repeated n_iter = 1000 times for the bootstrap 95% confidence interval."
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -65,7 +65,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Treatment Effect CI: (0.09,  0.28)\n"
+      "Treatment Effect CI: (0.09,  0.29)\n"
      ]
     }
    ],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -102,12 +102,12 @@
      "output_type": "stream",
      "text": [
       "risk factor  treatment\n",
-      "0            0            140\n",
-      "             1              7\n",
-      "1            0              3\n",
-      "             1             50\n",
+      "0            0            143\n",
+      "             1              5\n",
+      "1            0              4\n",
+      "             1             48\n",
       "dtype: int64\n",
-      "Estimated treatment effect = 0.15\n"
+      "Estimated treatment effect = 0.16\n"
      ]
     }
    ],
@@ -116,7 +116,7 @@
     "import numpy as np\n",
     "x = np.random.binomial(1,p_has_risk_factor,size=(N,))\n",
     "treat = np.random.binomial(1,p_treat_given_risk_factor*x+p_treat_given_no_risk_factor*(1-x))         \n",
-    "y = np.squeeze(np.random.binomial(1,p_outcome_given_risk_factor*x+p_outcome_given_no_risk_factor*(1-x)))\n",
+    "y = np.random.binomial(1,p_outcome_given_risk_factor*x+p_outcome_given_no_risk_factor*(1-x))\n",
     "\n",
     "# Summarize\n",
     "X = np.vstack([x, treat]).T\n",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -153,12 +153,12 @@
      "output_type": "stream",
      "text": [
       "risk factor  treatment\n",
-      "0            0            7\n",
-      "             1            7\n",
-      "1            0            3\n",
-      "             1            3\n",
+      "0            0            5\n",
+      "             1            5\n",
+      "1            0            4\n",
+      "             1            4\n",
       "dtype: int64\n",
-      "Estimated treatment effect = -0.05\n"
+      "Estimated treatment effect = -0.04\n"
      ]
     }
    ],
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -200,12 +200,12 @@
      "output_type": "stream",
      "text": [
       "risk factor  treatment\n",
-      "0            0             7\n",
-      "             1             7\n",
-      "1            0            50\n",
-      "             1            50\n",
+      "0            0             5\n",
+      "             1             5\n",
+      "1            0            48\n",
+      "             1            48\n",
       "dtype: int64\n",
-      "Estimated treatment effect = -0.02\n"
+      "Estimated treatment effect = -0.03\n"
      ]
     }
    ],
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -257,9 +257,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Method regression, Treatment Effect CI: (0.0900,  0.2947); 1000 valid runs.\n",
-      "Method matchexact, Treatment Effect CI: (-0.1349,  0.0506); 964 valid runs.\n",
-      "Method matchdist, Treatment Effect CI: (-0.1010,  0.6350); 946 valid runs.\n"
+      "Method regression, Treatment Effect CI: (0.0901,  0.2942); 1000 valid runs.\n",
+      "Method matchexact, Treatment Effect CI: (-0.1314,  0.0362); 951 valid runs.\n",
+      "Method matchdist, greedy, Treatment Effect CI: (-0.0971,  0.6510); 952 valid runs.\n",
+      "Method matchdist, 1-1, Treatment Effect CI: (-0.1283,  0.0416); 957 valid runs.\n"
      ]
     }
    ],
@@ -274,7 +275,7 @@
     "n_iter = 1000\n",
     "\n",
     "# Run all methods\n",
-    "methods = ['regression', 'matchexact', 'matchdist']\n",
+    "methods = ['regression', 'matchexact', 'matchdist, greedy', 'matchdist, 1-1']\n",
     "for method in methods:\n",
     "    cis, num_valid = scenario_A(N,\n",
     "                                n_iter,\n",
