Fixed bug in matching function. Modified notebook to explain G-comp estimators.

--- a/PlaceboSimulations/example_treatment_effect_under_placebo_B.ipynb
+++ b/PlaceboSimulations/example_treatment_effect_under_placebo_B.ipynb
@@ -107,7 +107,7 @@
     "plt.plot(locs,cis[:,0],'-')\n",
     "plt.plot(locs,cis[:,1],'-')\n",
     "plt.fill_between(locs,cis[:,0],cis[:,1],alpha=0.2)\n",
-    "plt.xlabel('location')\n",
+    "plt.xlabel('location offset')\n",
     "plt.ylabel('treatment effect')\n",
     "plt.show()"
    ]
@@ -189,7 +189,7 @@
     "plt.fill_between(locs,cis_['regression'][:,0],cis_['regression'][:,1],alpha=0.2,color='blue',label='Regression')\n",
     "plt.fill_between(locs,cis_['matchdist, greedy'][:,0],cis_['matchdist, greedy'][:,1],alpha=0.2,color='orange',label='Matching (Greedy)')\n",
     "plt.fill_between(locs,cis_['matchdist, 1-1'][:,0],cis_['matchdist, 1-1'][:,1],alpha=0.2,color='red',label='Matching (1-1)')\n",
-    "plt.xlabel('location')\n",
+    "plt.xlabel('location offset')\n",
     "plt.ylabel('treatment effect')\n",
     "plt.legend(bbox_to_anchor=(1.05, 1.0), loc=2, borderaxespad=0., numpoints=3)\n",
     "# plt.show()\n",
